Create lambda for processing auctions, and global secondary index

--- a/auction-service/serverless.yml
+++ b/auction-service/serverless.yml
@@ -42,6 +42,11 @@ functions:
           method: GET
           path: /auction/{id}
 
+  processAuctions:
+    handler: src/handlers/processAuctions.handler
+    events:
+      - schedule: rate(1 minute)
+
   placeBid:
     handler: src/handlers/placeBid.handler
     events:
